Scrollbar: yet another OCD fix

--- a/src/index.scss
+++ b/src/index.scss
@@ -66,7 +66,7 @@ code {
   background: #ffffff;
 }
 ::-webkit-scrollbar-track {
-  background: #33587a;
+  background: #28445f;
 }
 ::selection {
   background: rgba(45, 170, 219, 0.3);
